# skylake

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  workspace.yaml
.github/workflows/: ci.yml
dbt/skylake_dbt/: dbt_project.yml
dbt/skylake_dbt/models/bronze/: bronze_metar.sql  bronze_taf.sql  schema.yml
dbt/skylake_dbt/models/gold/: gold_airport_conditions.sql  gold_airport_risk_score.sql  gold_forecast_accuracy.sql
dbt/skylake_dbt/models/silver/: schema.yml  silver_forecast_actuals.sql  silver_metar_parsed.sql  silver_taf_parsed.sql
dbt/skylake_dbt/seeds/: airport_metadata.csv
docker/: dagster.Dockerfile  streamlit.Dockerfile
docs/: architecture.md  changelog.md  data_dictionary.md  data_model.md  demo_notes.md  ingestion_runbook.md  roadmap.md
docs/decisions/: ADR-001-storage-format.md  ADR-002-orchestration-tool.md  ADR-003-transformation-tool.md  ADR-004-data-quality-tool.md  ADR-005-api-source.md
ingestion/: ingest.py
ingestion/clients/: base_client.py  noaa_client.py
ingestion/utils/: logging.py
ingestion/writers/: raw_writer.py
pipeline/skylake/: __init__.py
pipeline/skylake/assets/: bronze_assets.py  raw_assets.py
pipeline/skylake/resources/: noaa_resource.py
pipeline/skylake/schedules/: schedules.py
streamlit/: app.py
tests/unit/: test_base_client.py  test_noaa_client.py  test_raw_writer.py
